Medium Fixes Reformatted Messages.sendParsedMessage usage Removed bStats "other_plugins_used" chart Fixed Configuration Fixed Custom Currency storage Added Banknote item customization Currencies now stored into Set instead of List Updated Version & UpdateChecker